# SignalBridge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: signalbridge.cc
config/: conduit.yaml  conduit_anonymise.yaml  conduit_ingest_test.yaml  ingest_endpoints.yaml  ingest_endpoints_test.yaml
include/signalbridge/: config.h  nas_5gs_parser.h  nas_identity_provider.h  ngap_parser.h  types.h
include/signalbridge/config/: config_loader.h
include/signalbridge/io/: async_pcap_output.h  http_stream_output.h  pcap_io.h  tcp_io.h  tcp_output.h  udp_output.h
include/signalbridge/metrics/: metrics.h  metrics_server.h
include/signalbridge/pipeline/: anonymiser.h  frame_extractor.h  ip_filter.h  pipeline.h  procedure_filter.h  protocol_filter.h
scripts/: compare_identities.py  extract_identities.py  generate_nas_asn1c.sh  link_reference_pcaps.sh  refresh_third_party_s1see.sh  verify_anonymisation.sh
server/: requirements.txt  signalvault_ingest.py
src/: nas_5gs_parser.cc  nas_identity_asn1c.cc  nas_identity_manual.cc  ngap_parser.cc
src/config/: config_loader.cc
src/io/: async_pcap_output.cc  http_stream_output.cc  pcap_io.cc  tcp_io.cc  tcp_output.cc  udp_output.cc
src/metrics/: metrics.cc  metrics_server.cc
src/pipeline/: anonymiser.cc  frame_extractor.cc  ip_filter.cc  pipeline.cc  procedure_filter.cc  protocol_filter.cc
